# vulkanstein3d

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
libs/: CMakeLists.txt
vulkanstein3d/: CMakeLists.txt  Common.h  Main.cpp
vulkanstein3d/App/: Input.cpp  Input.h  Window.cpp  Window.h
vulkanstein3d/Game/: Assets.cpp  Assets.h  Components.h  Intersection.h  Level.cpp  Level.h  MeshGenerator.cpp  MeshGenerator.h  PlayerController.cpp  PlayerController.h
vulkanstein3d/Rendering/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Instance.cpp  Instance.h  MaterialBuilder.cpp  MaterialBuilder.h  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
vulkanstein3d/Shaders/: CMakeLists.txt  mat_ground.frag  mat_ground.vert  mat_hud.frag  mat_hud.vert  mat_map.frag  mat_map.vert  mat_object.vert  mat_sprite.frag  mat_sprite.vert  test.frag
vulkanstein3d/Wolf3dLoaders/: Loaders.cpp  Loaders.h  Palette.h
